deploying front-back

--- a/meubly-front/src/style.css
+++ b/meubly-front/src/style.css
@@ -1,4 +1,6 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* Exemple dans un fichier CSS global */
 body {
